# AoC22

./: .gitignore  aoc.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  readme.md
aocgem/: .gitignore  Cargo.toml
aocgem/src/: cgi.rs  fetch.rs  lead.rs  leaderboard.rs  main.rs  nav.rs  query.rs  render.rs  routes.rs
aocgem/src/render/: day.rs  main.rs
aocgem/src/routes/: day.rs  main.rs
