[package]
name = "aocgem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3"
route-recognizer = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1"
regex = "1.7"
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
